2016-03-15  Kubo Takehiro  <kubo@jiubao.org>
	* docs/conflicts-local-connections-and-processes.md: Add a document
	    about conflicts between local connections and child process
	    handling on Unix.
	* README.md: Add a link to a newly added file.

2016-03-13  Kubo Takehiro  <kubo@jiubao.org>
	* ruby-oci8.gemspec: Change the license name in gemspec to suppress the
	   following warning.
	     WARNING: license value '2-clause BSD-style license' is invalid.
	     Use a license identifier from http://spdx.org/licenses or 'Nonstandard'
	     for a nonstandard license.

2016-01-29  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb, lib/oci8/properties.rb: Rename outbound_connect_timeout in
	   OCI8::properties to connect_timeout.
	* docs/timeout-parameters.md: Revise document.

2015-12-20  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/cursor.rb: Use OCI_ATTR_UB8_ROW_COUNT to get the number of processed rows
	    if Oracle client version is 12c or upper.

2015-12-20  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb, lib/oci8/properties.rb, test/test_connstr.rb:
	    Support tcp_connect_timeout, connect_timeout, send_timeout and
	    recv_timeout in OCI8::properties.
	* .yardopts, dist-files, docs/timeout-parameters.md: Add document
	    about timeout parameters.

2015-12-19  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb, lib/oci8/ocihandle.rb: Support SYSBACKUP, SYSDG
	    and SYSKM privileges.
	    (github issue #110)

2015-12-19  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/plthook_win32.c: Fix bug introduced by the previous commit
	    for mingw32 64-bit compiler.
	    (github issue #113)

2015-12-18  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/plthook_win32.c, ext/oci8/extconf.rb: Import the latest
	    plthook_win32.c for cygwin. Ruby-oci8 had not been compiled on
	    cygwin since 2.1.8.
	    (github issue #113)

2015-12-18  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: Fix a linkage error on cygwin and mingw32